<resources>
    <string name="drawer_open"></string>
    <string name="drawer_close"></string>
    <string name="app_name">Shack Browse</string>
    <string name="picuploader_name">ChattyPics Uploader</string>
    <string name="refreshThreads">Refresh</string>
    <string name="refreshPosts">Refresh Posts</string>
    <string name="tview_savethread">Save Thread</string>
    <string name="tview_unsavethread">Un-save Thread</string>
    <string name="copy_url">Copy URL</string>
    <string name="new_post">New Post</string>
    <string name="findOnPage">Finder</string>
    <string name="findInThread">Highlight In Thread</string>
    <string name="keyfilter">Keyword Autocollapse</string>
    <string name="modfilter">Check Your Filters</string>
    <string name="cloudopt">Cloud Sync Options</string>
    <string name="search">Search</string>
    <string name="searchdel">Edit Saved Searches</string>
    <string name="searchsave">Save This Search</string>
    <string name="editSearch">Edit Search</string>
    <string name="retrySearch">Refresh Results</string>
    <string name="notesrefresh">Refresh Notification List</string>
    <string name="notesdel">Clear List</string>
    <string name="statsdel">Clear All Stats</string>
    <string name="compose_preview">Show Preview</string>
    <string name="compose_post">Post</string>
    <string name="compose_showParent">Show Parent Post</string>
    <string name="compose_markup">Apply Markup</string>
    <string name="compose_gallery">Add Gallery Picture</string>
    <string name="compose_camera">Add Camera Shot</string>
    <string name="settings">Settings</string>
    <string name="preference_username_title">Username</string>
    <string name="preference_password_title">Password</string>
    <string name="preferences_chattypics_login">PicUploader Chattypics Account</string>
    <string name="preference_chattypics_username_summary">Chattypics username</string>
    <string name="preference_chattypics_password_summary">Chattypics password</string>
    <string name="preferences_header">Application Options</string>
    <string name="preferences_popupbrowser">Popup Browser</string>
    <string name="preferences_popupbrowser_summary">Choose when popup browser is used and how to scale images.</string>
    <string name="preference_pushnot_title">Push Notifications</string>
    <string name="preference_pushnot_summary">Sends you an instant push notification for various actions below.</string>
    <string name="preference_pushrepl_title">Replies</string>
    <string name="preference_pushrepl_summary">Notification when someone replies to your post.</string>
    <string name="preference_pushvan_title">Vanity</string>
    <string name="preference_pushvan_summary">Notification when someone posts your name.</string>
    <string name="preference_pushkey_title">Keywords</string>
    <string name="preference_pushkey_summary">Notification when someone posts a keyword.</string>
    <string name="preferences_appwide">App-wide Options</string>
    <string name="preferences_appwide_summary">Splitview mode, Orientation lock, Font sizes, Favorites pane, Shack[LOL], Volume nav, API, Analytics opt-out</string>
    <string name="preferences_notifications">Notifications</string>
    <string name="preference_testnote">Test Notification</string>
    <string name="preferences_notifications_summary">Push notification options</string>
    <string name="preference_notesound_title">Sound</string>
    <string name="preference_notevibrate_title">Vibrate</string>
    <string name="preference_notecolor_title">LED Color</string>
    <string name="preference_smcheckcell_title">App Start Check SMs On Cell Network</string>
    <string name="preference_smcheckcell_summary">If UNCHECKED, Shackmessages will only be checked on application start when connected to WiFi. Usually takes about 10k of data</string>
    <string name="preferences_threadlist">Thread List Options</string>
    <string name="preferences_threadlist_summary">Choose which data to show and how to show it, as well as supercollapsed thread reset</string>
    <string name="preferences_threadview">Reply View Options</string>
    <string name="preferences_threadview_summary">Swipe to dismiss, Show usernames, New post indicators, Shack[LOL]</string>
    <string name="preferences_compose">Post Composer Options</string>
    <string name="preferences_compose_summary">Force Post Preview Option</string>
    <string name="preference_getlols_title">User Moderation API</string>
    <string name="preference_getlols_summary">Retrieve ShackLOL tag data for display. User created. Cached; refresh maximum once per five minutes. Incurs additional data use and slows load times when refreshing. Default ON.</string>
    <string name="preference_threadlist_threadlols_title">Show User Mod Tags</string>
    <string name="preference_threadlist_threadlols_summary">Displays Shack[LOL] data contained in a thread in the topic listing view. Must be enabled in appwide settings first.</string>
    <string name="preference_threadview_postlols_title">User Mod Tags</string>
    <string name="preference_threadview_postlols_summary">Displays ShackLOL tags in the reply view. Must be enabled in appwide settings first.</string>
    <string name="preference_swappedsplit_title">Backwards Tablet View</string>
    <string name="preference_swappedsplit_summary">Swap left/right panes in split view</string>
    <string name="preference_cloudsync_title">Cloud Sync</string>
    <string name="preference_cloudsync_summary">Starred threads will be synced to other Shack Browse devices. Must have verified login.</string>
    <string name="preference_showpinned_title">Show Starred Items</string>
    <string name="preference_showpinned_summary">Show starred items in the thread list. A list of starred items is always available in the starred posts app area.</string>
    <string name="preference_tag_thread_list_title">Show Mod Tags</string>
    <string name="preference_tag_thread_list_summary">Show tagging information set by Shacknews moderators.</string>
    <string name="preference_shacktag_thread_list_title">Show Markup</string>
    <string name="preference_shacktag_thread_list_summary">Show or strip colorful shacktag markup from topic list preview text.</string>
    <string name="preference_splitView_title">Use Split/Tablet View</string>
    <string name="preference_splitView_summary">Select whether to use split view (tablet mode) for portrait, landscape, neither or both. Good for tablets.</string>
    <string name="preference_newbranches_title">Show New Posts</string>
    <string name="preference_newbranches_summary">Show green tree branches next to posts that are new since the first time you loaded the thread.</string>
    <string name="preference_orientLock_title">Orientation Lock</string>
    <string name="preference_orientLock_summary">Lock the application to portrait or landscape mode.</string>
    <string name="preference_fontsize_title">Text Zoom</string>
    <string name="preference_fontsize_summary">Make text larger. REQUIRES an app restart.</string>
    <string name="preference_fastscroll_title">Fast Scroll</string>
    <string name="preference_fastscroll_summary">Show grabbable/draggable fast scroll control in long threads over 400 posts.</string>
    <string name="preference_swipedismiss_title">Swipe to Dismiss</string>
    <string name="preference_swipedismiss_summary">Allows you to close the reply view with a left-to-right swipe.</string>
    <string name="preference_forcepostpreview_title">Force Post Preview</string>
    <string name="preference_forcepostpreview_summary">Forces you to preview your post before posting it.</string>
    <string name="preference_popup_browser_title">Default Link Action</string>
    <string name="preference_popup_browser_summary">Choose which links, if any, open internally in the popup browser.</string>
    <string name="preference_bIZ_title">Setup Image Autozoom</string>
    <string name="preference_bIZ_summary">Attempt to fit images in the popup browser to your screen. Click to close settings and enter setup for this feature.</string>
    <string name="preference_swipecollapse_title">Swipe to Collapse</string>
    <string name="preference_swipecollapse_summary">Control swipe to collapse action.</string>
    <string name="preference_strip_newlines_thread_list_title">Strip Newlines</string>
    <string name="preference_strip_newlines_thread_list_summary">Strip line breaks from topic list previews.</string>
    <string name="preference_preview_line_count_title">Preview Line Count</string>
    <string name="preference_preview_line_count_summary">Choose the number of lines to display in topic list previews.</string>
    <string name="preference_use_volume_buttons_title">Volume Button Navigation</string>
    <string name="preference_use_volume_buttons_summary">Scroll through replies and threads using volume buttons. Only works with replies in split view mode.</string>
    <string name="preference_show_hours_since_title">Display Times as Hours Since</string>
    <string name="preference_show_hours_since_summary">Choose whether to display post times as "hours since" when under 24 hours or to use dates.</string>
    <string name="preference_show_mod_tools_title">Shacknews Mod Tools</string>
    <string name="preference_show_mod_tools_summary">Enable if you are a Shacknews moderator. Shows up as a little flag on a moddable post.</string>
    <string name="preferences_version">Application Version</string>
    <string name="preference_version_title">Unknown</string>
    <string name="preference_version_summary">Click to view the change log</string>
    <string name="preference_ping">Ping APIs</string>
    <string name="preference_animspeed_title">Animation Speed</string>
    <string name="preference_animspeed_summary">Adjust the speed of the reply expansion animation.</string>
    <string name="preference_APP_DEFAULTPANE">Default Load at Start</string>
    <string name="preference_APP_DEFAULTPANE_summary">This setting controls which segment of the app loads when the app is started: frontpage, latest chatty, messages, etc.</string>
    <string name="preference_limitvibratespam_title">Annoyance Limit</string>
    <string name="preference_limitvibratespam_summary">Limits the minimum time between two notifications that use vibrate and sound.</string>
    <string name="preference_periodicnetworkservice_summary">Select how often to check for shackmessages in the background. Set to OFF to prevent this.</string>
    <string name="preference_periodicnetworkservice_title">Background ShackMessage Check</string>
	<string name="preference_LEDBlinkInMS_title">LED Blink Speed</string>
    <string name="preference_LEDBlinkInMS_summary">Changes the LED blink rate</string>
    <string name="preference_echochamber_title">Block List</string>
    <string name="preference_echochamber_summary">Open user blocking settings</string>
    <string name="preference_echochamber_desc_summary">Remove posts and replies to posts of users on block lists. Also removes root posts and blocks notifications. Option to just replace text instead ("palatize" mode below).</string>
    <string name="preference_echochamberauto_title">Auto Chamber</string>
    <string name="preference_echochamberauto_summary">Auto block users that have been blocked by large numbers of other shack browse users (does not modify your block list) (experimental, may not be functional yet or ever)</string>
    <string name="preference_blocklist_title">Edit personal block list</string>
    <string name="preference_blocklist_summary">Modify the list of users you have added to your block list.</string>
    <string name="preference_echochamberpalatize_title">Palatize Mode</string>
    <string name="preference_echochamberpalatize_summary">Instead of removing posts and replies to blocked posts, this option replaces blocked users\' post text with more palatable text and smiley faces.</string>
</resources>