<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:key="base">
  <PreferenceCategory android:title="@string/preferences_header">
      <!-- 
      <PreferenceScreen
        android:key="logins"
        android:title="@string/preferences_pagelogin"
        android:summary="@string/preferences_pagelogin_summary">
		  <PreferenceCategory android:title="@string/preferences_login">
		  	<EditTextPreference
		  	     android:key="userName"
		  	     android:title="@string/preference_username_title"
		  	     android:summary="@string/preference_username_summary"
		  	     android:singleLine="true"/>
		  	<EditTextPreference
		  	     android:key="password"
		  	     android:title="@string/preference_password_title"
		  	     android:summary="@string/preference_password_summary"
		  	     android:singleLine="true"
		  	     android:password="true"/>
		  </PreferenceCategory>
	  </PreferenceScreen>
	   -->
   <PreferenceScreen android:key="notifications" android:title="@string/preferences_notifications" android:summary="@string/preferences_notifications_summary">
        <CheckBoxPreference
  	     android:key="noteEnabled"
  	     android:title="@string/preference_pushnot_title"
  	     android:summary="@string/preference_pushnot_summary"
  	     android:defaultValue="false"
  	     />
        <CheckBoxPreference
  	     android:key="noteReplies"
  	     android:title="@string/preference_pushrepl_title"
  	     android:summary="@string/preference_pushrepl_summary"
  	     android:dependency="noteEnabled"
  	     android:defaultValue="false"
  	     />
        <CheckBoxPreference
  	     android:key="noteVanity"
  	     android:title="@string/preference_pushvan_title"
  	     android:summary="@string/preference_pushvan_summary"
  	     android:dependency="noteEnabled"
  	     android:defaultValue="false"
  	     />
        <Preference
  	     android:key="noteKeywords"
  	     android:title="@string/preference_pushkey_title"
  	     android:summary="@string/preference_pushkey_summary"
  	     android:dependency="noteEnabled"
  	     />
        <CheckBoxPreference
  	     android:key="SMCheckOnCellNotification"
  	     android:title="@string/preference_smcheckcell_title"
  	     android:summary="@string/preference_smcheckcell_summary"
  	     android:defaultValue="false"
  	     />
        <RingtonePreference
         android:showDefault="true"
		 android:key="notificationSound"
		 android:title="@string/preference_notesound_title"
     	 android:ringtoneType="notification"
     	 />
        <net.woggle.ColorDialogPreference
		    android:key="notificationColor"
		    android:title="@string/preference_notecolor_title"
		    android:defaultValue="@color/modtag_stupid"
		/>
        <CheckBoxPreference
  	     android:key="notificationVibrate"
  	     android:title="@string/preference_notevibrate_title"
  	     android:defaultValue="true"
  	     />
        <Preference
  	     android:key="pref_testnote"
  	     android:title="@string/preference_testnote"
  	     />
        
    </PreferenceScreen>
  <PreferenceScreen android:key="appwide" android:title="@string/preferences_appwide" android:summary="@string/preferences_appwide_summary">

      <ListPreference
          android:key="APP_DEFAULTPANE"
          android:title="@string/preference_APP_DEFAULTPANE"
          android:entries="@array/preference_APP_DEFAULTPANE"
          android:entryValues="@array/preference_APP_DEFAULTPANE_vals"
          android:summary="@string/preference_APP_DEFAULTPANE_summary"
          android:defaultValue="6"
          />
     <ListPreference
      android:key="splitView"
      android:title="@string/preference_splitView_title"
      android:entries="@array/preference_splitView"
      android:entryValues="@array/preference_splitView_vals"
      android:summary="@string/preference_splitView_summary"
      android:defaultValue="1"
      />
     <CheckBoxPreference
	  	     android:key="swappedSplit"
	  	     android:title="@string/preference_swappedsplit_title"
	  	     android:summary="@string/preference_swappedsplit_summary"
	  	     android:defaultValue="false"
	  	     />
     <ListPreference
      android:key="orientLock"
      android:title="@string/preference_orientLock_title"
      android:entries="@array/preference_orientLock"
      android:entryValues="@array/preference_orientLock_vals"
      android:summary="@string/preference_orientLock_summary"
      android:defaultValue="0"
      />
    <ListPreference
      android:key="fontZoom"
      android:title="@string/preference_fontsize_title"
      android:entries="@array/preference_fontsizes"
      android:entryValues="@array/preference_fontsize_vals"
      android:summary="@string/preference_fontsize_summary"
      android:defaultValue="1.0"
      />
    <CheckBoxPreference
	  	     android:key="getLols"
	  	     android:title="@string/preference_getlols_title"
	  	     android:summary="@string/preference_getlols_summary"
	  	     android:defaultValue="true"
	  	     />
    <CheckBoxPreference
  	     android:key="useVolumeButtons"
  	     android:title="@string/preference_use_volume_buttons_title"
  	     android:summary="@string/preference_use_volume_buttons_summary"
  	     android:defaultValue="true"
  	     />
    <CheckBoxPreference
  	     android:key="showHoursSince"
  	     android:title="@string/preference_show_hours_since_title"
  	     android:summary="@string/preference_show_hours_since_summary"
  	     android:defaultValue="true"
  	     />
    <ListPreference
  	     android:key="apiUrl2"
  	     android:title="@string/preference_apiUrl_title"
  	     android:entries="@array/preference_apiUrl"
         android:entryValues="@array/preference_apiUrl_vals"
  	     android:summary="@string/preference_apiUrl_summary"
  	     android:defaultValue="5"
  	 />
    <Preference
  	     android:key="pref_ping"
  	     android:title="@string/preference_ping" />
    <CheckBoxPreference
  	     android:key="analytics"
  	     android:title="@string/preference_analytics_title"
  	     android:summary="@string/preference_analytics_summary"
  	     android:defaultValue="true"
  	     />
    </PreferenceScreen>
    </PreferenceCategory>
    <PreferenceScreen android:key="tlist" android:title="@string/preferences_threadlist" android:summary="@string/preferences_threadlist_summary">
        <CheckBoxPreference
  	     android:key="enableCloudSync"
  	     android:title="@string/preference_cloudsync_title"
  	     android:summary="@string/preference_cloudsync_summary"
  	     android:defaultValue="true"
  	     />
        <ListPreference
	  	     android:key="swipeCollapse"
	  	     android:title="@string/preference_swipecollapse_title"
	  	     android:entries="@array/preference_swipecollapse"
	         android:entryValues="@array/preference_swipecollapse_vals"
	  	     android:summary="@string/preference_swipecollapse_summary"
	  	     android:defaultValue="2"
	  	 />
        <CheckBoxPreference
  	     android:key="showPinnedInTL"
  	     android:title="@string/preference_showpinned_title"
  	     android:summary="@string/preference_showpinned_summary"
  	     android:defaultValue="true"
  	     />
        <CheckBoxPreference
  	     android:key="showModTagsInThreadList"
  	     android:title="@string/preference_tag_thread_list_title"
  	     android:summary="@string/preference_tag_thread_list_summary"
  	     android:defaultValue="true"
  	     />
        <CheckBoxPreference
	  	     android:key="showThreadLolsThreadList"
	  	     android:title="@string/preference_threadlist_threadlols_title"
	  	     android:summary="@string/preference_threadlist_threadlols_summary"
	  	     android:defaultValue="true"
	  	     />
  	<CheckBoxPreference
  	     android:key="showShackTagsInThreadList"
  	     android:title="@string/preference_shacktag_thread_list_title"
  	     android:summary="@string/preference_shacktag_thread_list_summary"
  	     android:defaultValue="true"
  	     />
  	<CheckBoxPreference
  	     android:key="previewStripNewLines"
  	     android:title="@string/preference_strip_newlines_thread_list_title"
  	     android:summary="@string/preference_strip_newlines_thread_list_summary"
  	     android:defaultValue="false"
  	     />
  	<EditTextPreference
  	     android:key="previewLineCount"
  	     android:title="@string/preference_preview_line_count_title"
  	     android:summary="@string/preference_preview_line_count_summary"
  	     android:numeric="integer"
  	     android:defaultValue="7"/>
    </PreferenceScreen>
    <PreferenceScreen android:key="popupbrowser" android:title="@string/preferences_popupbrowser" android:summary="@string/preferences_popupbrowser_summary">
        <ListPreference
  	     android:key="usePopupBrowser2"
  	     android:title="@string/preference_popup_browser_title"
  	     android:entries="@array/preference_popupBrowser"
         android:entryValues="@array/preference_popupBrowser_vals"
  	     android:summary="@string/preference_popup_browser_summary"
  	     android:defaultValue="1"
	  	 />
	    <Preference
	  	     android:key="openBrowserImageZoom"
	  	     android:title="@string/preference_bIZ_title"
	  	     android:summary="@string/preference_bIZ_summary"
	  	 />
	</PreferenceScreen>
    <PreferenceScreen android:key="tview" android:title="@string/preferences_threadview" android:summary="@string/preferences_threadview_summary">
	    <CheckBoxPreference
	  	     android:key="swipeDismiss"
	  	     android:title="@string/preference_swipedismiss_title"
	  	     android:summary="@string/preference_swipedismiss_summary"
	  	     android:defaultValue="true"
	  	     />
	    <CheckBoxPreference
	  	     android:key="showNewBranches"
	  	     android:title="@string/preference_newbranches_title"
	  	     android:summary="@string/preference_newbranches_summary"
	  	     android:defaultValue="true"
	  	     />
	    <CheckBoxPreference
	  	     android:key="fastScroll"
	  	     android:title="@string/preference_fastscroll_title"
	  	     android:summary="@string/preference_fastscroll_summary"
	  	     android:defaultValue="true"
	  	     />
	    
	      <CheckBoxPreference
	  	     android:key="showPostLolsThreadView"
	  	     android:title="@string/preference_threadview_postlols_title"
	  	     android:summary="@string/preference_threadview_postlols_summary"
	  	     android:defaultValue="true"
	  	     />
	    <CheckBoxPreference
  	     android:key="showModTools"
  	     android:title="@string/preference_show_mod_tools_title"
  	     android:summary="@string/preference_show_mod_tools_summary"
  	     android:defaultValue="false"
  	     />
        <ListPreference
            android:key="replyAnimationSpeed"
            android:title="@string/preference_animspeed_title"
            android:entries="@array/preference_animspeed"
            android:entryValues="@array/preference_animspeed_vals"
            android:summary="@string/preference_animspeed_summary"
            android:defaultValue="1.5"
            />
    </PreferenceScreen>
    <PreferenceScreen android:key="postcomposer" android:title="@string/preferences_compose" android:summary="@string/preferences_compose_summary">
        <ListPreference
  	     android:key="forcePostPreview"
  	     android:title="@string/preference_forcepostpreview_title"
  	     android:entries="@array/preference_forcepostpreview"
         android:entryValues="@array/preference_forcepostpreview_vals"
  	     android:summary="@string/preference_forcepostpreview_summary"
  	     android:defaultValue="1"
	  	 />
        <PreferenceCategory android:title="@string/preferences_chattypics_login">
	  	<EditTextPreference
	  	     android:key="chattyPicsUserName"
	  	     android:title="@string/preference_username_title"
	  	     android:summary="@string/preference_chattypics_username_summary"
	  	     android:singleLine="true"/>
	  	<EditTextPreference
	  	     android:key="chattyPicsPassword"
	  	     android:title="@string/preference_password_title"
	  	     android:summary="@string/preference_chattypics_password_summary"
	  	     android:singleLine="true"
	  	     android:password="true"/>
	  </PreferenceCategory>
    </PreferenceScreen>
  <PreferenceCategory android:title="@string/preferences_version">
      <Preference
  	     android:key="versionName"
  	     android:title="@string/preference_version_title"
  	     android:summary="@string/preference_version_summary" />
      <Preference
  	     android:key="pref_donate"
  	     android:title="@string/preference_donate"
  	     android:summary="@string/preference_donate_summary" />
      </PreferenceCategory>
      
</PreferenceScreen>
