<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:key="notificationCat" android:title="@string/preferences_notifications" android:summary="@string/preferences_notifications_summary">
        <CheckBoxPreference
            android:key="noteEnabled"
            android:title="@string/preference_pushnot_title"
            android:summary="@string/preference_pushnot_summary"
            android:defaultValue="false"
            />
        <CheckBoxPreference
            android:key="noteReplies"
            android:title="@string/preference_pushrepl_title"
            android:summary="@string/preference_pushrepl_summary"
            android:dependency="noteEnabled"
            android:defaultValue="false"
            />
        <CheckBoxPreference
            android:key="noteVanity"
            android:title="@string/preference_pushvan_title"
            android:summary="@string/preference_pushvan_summary"
            android:dependency="noteEnabled"
            android:defaultValue="false"
            />
        <Preference
            android:key="noteKeywords"
            android:title="@string/preference_pushkey_title"
            android:summary="@string/preference_pushkey_summary"
            android:dependency="noteEnabled"
            />
        <!--
        <CheckBoxPreference
            android:key="SMCheckOnCellNotification"
            android:title="@string/preference_smcheckcell_title"
            android:summary="@string/preference_smcheckcell_summary"
            android:defaultValue="false"
            />
            -->
        <ListPreference
            android:key="PeriodicNetworkServicePeriod"
            android:title="@string/preference_periodicnetworkservice_title"
            android:entries="@array/preference_periodicnetworkservice"
            android:entryValues="@array/preference_periodicnetworkservice_vals"
            android:summary="@string/preference_periodicnetworkservice_summary"
            android:defaultValue="10800"
            />
		<Preference
			android:key="notificationChannels"
			android:title="Change LED light, sound, etc"
			android:summary="Link to system settings where each type of notification can be customized in terms of light, sound, and vibration. Some phones may not support changing LED settings. Blame Google."
			/>
        <RingtonePreference
            android:showDefault="true"
            android:key="notificationSound"
            android:title="@string/preference_notesound_title"
            android:ringtoneType="notification"
            />
		<Preference
			android:key="notificationColor2"
			android:title="@string/preference_notecolor_title"
			/>
        <CheckBoxPreference
            android:key="notificationVibrate"
            android:title="@string/preference_notevibrate_title"
            android:defaultValue="true"
            />
        <ListPreference
            android:key="limitVibrateSpamInMS"
            android:title="@string/preference_limitvibratespam_title"
            android:entries="@array/preference_limitvibratespam"
            android:entryValues="@array/preference_limitvibratespam_vals"
            android:summary="@string/preference_limitvibratespam_summary"
            android:defaultValue="30000"
            />
        <ListPreference
            android:key="LEDBlinkInMS"
            android:title="@string/preference_LEDBlinkInMS_title"
            android:entries="@array/preference_LEDBlinkInMS"
            android:entryValues="@array/preference_LEDBlinkInMS_vals"
            android:summary="@string/preference_LEDBlinkInMS_summary"
            android:defaultValue="2000"
            />
<!--		TODO: Bring this back when notifications are ready or remove permanently -->
<!--        <Preference-->
<!--            android:key="pref_testnote"-->
<!--            android:title="@string/preference_testnote"-->
<!--            />-->
<!--		<Preference-->
<!--			android:key="notificationDevices"-->
<!--			android:summary="@string/preference_devicesnote"-->
<!--			/>-->
<!--		<Preference-->
<!--			android:key="notificationEditOnline"-->
<!--			android:title="@string/preference_noteeditonline"-->
<!--			android:summary="@string/preference_noteeditonline_summary"-->
<!--			/>-->

    </PreferenceCategory>
</PreferenceScreen>